Add documentation, modify manifest.json to support gecko ID, add jsdoc config and modify .gitignore to reflect.

--- a/manifest.json
+++ b/manifest.json
@@ -22,5 +22,11 @@
             ],
             "js": ["content_script.js"]
         }
-    ]
+    ],
+    
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "f13ea180-3311-43df-ae1e-77310d139fb4"
+        }
+    }
 }
