Removed the URL in the description.

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "Lingodeer Improvements",
     "version": "1.0",
 
-    "description": "Improves quality-of-life for the Lingodeer web client (https://www.lingodeer.com).",
+    "description": "Improves quality-of-life for the Lingodeer web client.",
 
     "developer": {
         "name": "Evan Hock",
