Add 128x128 image to icons

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
 
     "icons": {
         "32": "icons/32-lingodeer.png",
-        "64": "icons/64-lingodeer.png"
+        "64": "icons/64-lingodeer.png",
+        "128": "icons/128-lingodeer.png"
     },
 
     "content_scripts": [
